# SIGSEGV

./: CMakeLists.txt  CmakeLists.txt  Makefile
include/: enemy.h  globals.h  helpers.h  pillar.h  player.h  window.h
include/utils/: array.h
src/: enemy.c  globals.c  helpers.c  main.c  pillar.c  player.c  window.c
